--- a/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -123,7 +123,7 @@
         <!-- Row shown when there is no matching data. This might only work with Material 10? Does not work on current Material
         version 9.2.4 -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          <td class="filter-not-found-cell" colspan="5">No data matching the filter "{{input.value}}"</td>
         </tr>
       </table>
 
