No specific issue: Added some code to try to fix dialog close button size

--- a/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
@@ -28,10 +28,11 @@
       <div [attr.id]="windowManager.windows[this.TSID_Location].title"></div>
 
       <div class="TS-table-components">
-        <button mat-raised-button class="TS-table-button">
+        <button mat-raised-button (click)= "" class="TS-table-button">
           View Data Table
         </button>
       </div>
+
     </div>
   </div>
   <!-- Create and display a Chart.js graph if the showGraph Dialog class variable is true -->
