--- a/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
@@ -3,8 +3,8 @@
   <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen, but only using the h1 -->
   <div mat-dialog-title cdkDragHandle class="drag-header">
     <!-- Display a geoMap, geoLayerViewGroup, or geoLayerView name along with Information when showing documentation -->
-    <div class="table-header-div">
-      <p class="table-header">
+    <div class="drag-header-div">
+      <p class="drag-header-title">
         {{informationName}} - Information
       </p>
     </div>
@@ -16,17 +16,17 @@
   <!------------------------------------------------------------------------------------------------------------------------------>
   <!-- These div elements will display documentation for their given layer -->
   <!-- Show the regular text documentation of a geoLayerViewGroup or geoLayerView -->
-  <div *ngIf="docText" class="docBox">
-    <pre class="docBoxText">{{doc}}</pre>
+  <div *ngIf="docText" class="doc-box">
+    <pre class="doc-box-text">{{doc}}</pre>
   </div>
   <!-- Show the markdown converted to HTML using showdown of a geoLayerViewGroup or geoLayerView -->
-  <div *ngIf="docMarkdown" class="docBox">
+  <div *ngIf="docMarkdown" class="doc-box">
     <div id="docDiv">
-      <showdown [value]="showdownHTML" [options]="options" class="docBoxText"></showdown>
+      <showdown [value]="showdownHTML" [options]="options" class="doc-box-text"></showdown>
     </div>
   </div>
   <!-- Show the contents of a regular HTML file -->
-  <div *ngIf="docHTML" class="docBox">
+  <div *ngIf="docHTML" class="doc-box">
     <div id="docDiv"></div>
   </div>
 
