--- a/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.css
@@ -1,52 +1,12 @@
-/* TAGS */
-
-/* In the container box class, the <h1> there is the draggable element by the user. Its default had a margin of 20px,
-and was not draggable, being useless in this case. Getting rid of the margin and padding the top and bottom of the <h1>
-allowed the ability to expand the draggable area, hopefully making the process easier for users. */
-h1 {
-  background-color: #e6e6e6;
-  /* padding-top: 10px;
-  padding-bottom: 15px; */
-  margin-bottom: 0px;
-  height: 5%;
-}
-
 /* CLASSES */
-
-/* This is the default name of the highest level cdk <div> in the Dialog Content Component. Is is used for dragging the
-dialog around the page by the header, and style used to be there. Now that the class name is known, it was been
-migrated to this CSS file */
-.cdk-drag {
-  height: 100%;
-}
-
-/* The class for the close button. The inline-block display makes it so that it will share with the title header
-div, rendering them side-by-side */
-.dialog-close-button {
-  width: 10%;
-  display: inline-block;
-  background-color: #c2c1c1;
-}
-
-.table-header {
-  font-size: medium;
-  padding-left: 10%;
-  text-align: center;
-  width: 100%;
-}
-
-.table-header-div {
-  display: inline-block;
-  width: 90%;
-}
 
 /* Sets a max height for the text in the Dialog, as well as uses Courier font for formatting the text correctly and making the
 font smaller so that's it still readable, but the user won't have to scroll a lot to get around the data. */
-.textBox {
-  height: 95%;
+.text-box {
+  height: 94.5%;
 }
 
-.textBoxText {
+.text-box-text {
   height: 100%;
   font-family: 'Courier New', Courier, monospace;
   font-size: small;
