Issues #280: Updated the README file more, added a license markdown page to the project

--- a/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.css
@@ -8,7 +8,20 @@ h4 {
 
 /* CLASSES */
 
+.loading {
+  position: relative;
+  height: 565px;
+  width: 900px;
+}
+
+.progress-spinner {
+  position: absolute;
+  top: 182px;
+  left: 400px;
+}
+
 .TS-table-button {
+  display: inline-block;
   margin: 0px 20px 0px 20px;
   background-color: #c2c1c1;
 }
