--- a/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <!-- The close button on the upper right part of the dialog -->
-    <button mat-button (click)="onClose()" class="dialog-close-button">
+    <button mat-button (click)="onClose()" class="upper-dialog-close-button">
       <i class="fa fa-times" aria-hidden="true"></i>
     </button>
   </div>
