--- a/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
@@ -9,7 +9,7 @@
       </p>
     </div>
     <!-- The close button on the upper right part of the dialog -->
-    <button mat-button (click)="onClose()" class="dialog-close-button">
+    <button mat-button (click)="onClose()" class="upper-dialog-close-button">
       <i class="fa fa-times" aria-hidden="true"></i>
     </button>
   </div>
@@ -20,19 +20,20 @@
       {{mainTitleString}}
     </h4>
   </div>
+  <!-- TODO: jpkeahey 2020.09.22 - This is working per say, but the animation is wrong until AFTER the data has been loaded,
+  then it displays as expected. For right now, it's better than nothing -->
+  <div *ngIf="isLoading" class="loading">
+    <mat-progress-spinner
+        class="progress-spinner"
+        [mode]="'indeterminate'">
+    </mat-progress-spinner>
+  </div>
 
   <!-- The three div elements below will show graphs in the Dialog -->
   <!-- Show plotly.js by default -->
   <div *ngIf="!chartPackage" class="chartPackage">
     <div class="showGraph">
       <div [attr.id]="windowManager.windows[this.TSID_Location].title"></div>
-
-      <div class="TS-table-components">
-        <button mat-raised-button (click)="openTSTableDialog()" class="TS-table-button">
-          View Data Table
-        </button>
-      </div>
-
     </div>
   </div>
   <!-- Create and display a Chart.js graph if the showGraph Dialog class variable is true -->
@@ -46,6 +47,17 @@
     <div *ngIf="chartPackage.toUpperCase() === 'PLOTLY'" class="showGraph">
       <div [attr.id]="windowManager.windows[this.TSID_Location].title"></div>
     </div>
+  </div>
+
+  <!-- A button on the lower left for viewing the data table of the current time series graph -->
+  <div class="TS-table-components">
+    <button mat-raised-button (click)="openTSTableDialog()" class="TS-table-button">
+      Data Table
+    </button>
+
+    <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
+      Close
+    </button>
   </div>
 
 </div>
