--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -1,6 +1,6 @@
-<!-- The draggable <h1> element so a user can move a graph around anywhere on the screen -->
+<!-- The draggable <div> element so a user can move a graph around anywhere on the screen -->
 <div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
-  <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen, but only using the h1 -->
+  <!-- The draggable <div> element so a user can move a graph around anywhere on the screen, but only using the div header -->
   <div mat-dialog-title cdkDragHandle class="drag-header">
     <!-- Display the geoLayerView name along with data table when showing an attribute table -->
     <div class="drag-header-div">
@@ -9,7 +9,7 @@
       </p>
     </div>
     <!-- The close button on the upper right part of the dialog -->
-    <button mat-button (click)="onClose()" class="dialog-close-button">
+    <button mat-button (click)="onClose()" class="upper-dialog-close-button">
       <i class="fa fa-times" aria-hidden="true"></i>
     </button>
   </div>
@@ -26,7 +26,7 @@
 
       <table mat-table [dataSource]="attributeTable">
         <!-- All Columns -->
-        <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
+        <ng-container *ngFor="let property of attributeTable.data[0] | keyvalue;" matColumnDef="{{property.key}}">
           <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
             <b>
               {{property.key}}
