--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
@@ -1,11 +1,36 @@
 /* TAGS */
 
-/* This is necessary for taking up the entire height available in the dialog */
-pre {
-  height: 100%;
+/* Table width for the Mat Table */
+table {
+  width: 100%;
+  table-layout: fixed;
+  /* border-spacing: 0 8px !important; */
+}
+
+th.mat-header-cell {
+  background-color: #ebebeb;
+  border-right: 1px;
+  border-right-color: rgba(0, 0, 0, 0.25);
+  border-right-style: dotted;
+  text-align: center;
 }
 
 /* CLASSES */
+
+::ng-deep .mat-focused .mat-form-field-label {
+  /*change color of label*/
+  color: #9DB66B !important;
+ }
+
+ ::ng-deep.mat-form-field-underline {
+  /*change color of underline*/
+  background-color: #9DB66B !important;
+} 
+
+::ng-deep.mat-form-field-ripple {
+ /*change color of underline when focused*/
+ background-color: #9DB66B !important;;
+}
 
 .filter-not-found-cell {
   /* This is needed for the virtual scrolling to handle correctly. Tells the height of each cell in the table
@@ -14,6 +39,47 @@ pre {
   /*      Top Right Bot Left */
   padding: 0 8px 0 8px;
   text-align: center;
+}
+
+.mat-cell {
+  border-right: 1px;
+  border-right-color: rgba(0, 0, 0, 0.25);
+  border-right-style: dotted;
+  /* This is needed for the virtual scrolling to handle correctly. Tells the height of each cell in the table
+  to be 48 pixels, which should be the pixels, but for some reason something is overriding it */
+  height: 48px;
+  /*      Top Right Bot Left */
+  padding: 0 8px 0 8px;
+  text-align: right;
+}
+
+.mat-cell.left {
+  text-align: left;
+}
+
+.mat-cell.right {
+  text-align: right !important;
+}
+
+/* If the Material Table cell is a URL, treat it differently than a regular string or number. The bottom three options
+will hide the rest of a long string in a fixed-layout table, and won't wrap, creating the desired cell style */
+.mat-cell.url {
+  text-align: left;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.mat-column {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  height: 8%;
+  width: 100%;
 }
 
 .mat-row {
