--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -9,7 +9,7 @@
         </p>
       </div>
       <!-- The close button on the upper right part of the dialog -->
-      <button mat-button (click)="onClose()" class="dialog-close-button">
+      <button mat-button (click)="onClose()" class="upper-dialog-close-button">
         <i class="fa fa-times" aria-hidden="true"></i>
       </button>
     </div>
@@ -26,7 +26,7 @@
   
         <table mat-table [dataSource]="attributeTable">
           <!-- All Columns -->
-          <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
+          <ng-container *ngFor="let property of attributeTable.data[0] | keyvalue;" matColumnDef="{{property.key}}">
             <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
               <b>
                 {{property.key}}
@@ -34,11 +34,11 @@
             </th>
   
             <td mat-cell
-                *matCellDef="let element; let i = index"
-                [ngClass]="determineJustification(element.properties[property.key])"
-                [attr.id]="'cell-' + element.properties[property.key]">
+                *matCellDef="let element"
+                [ngClass]="determineJustification(element[property.key])"
+                [attr.id]="'cell-' + element[property.key]">
   
-              {{element.properties[property.key]}}
+              {{element[property.key]}}
               
             </td>
             <!-- <td mat-footer-cell *matFooterCellDef> </td> -->
@@ -57,14 +57,14 @@
           <!-- Show a row with text letting a user know that there input matches nothing in the dataset. This only works with
           Angular and Material version 10 -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="filter-not-found-cell" colspan="5">No data matching the filter "{{input.value}}"</td>
+            <td class="filter-not-found-cell" colspan="2">No data matching the filter "{{input.value}}"</td>
           </tr>
         </table>
   
       </cdk-virtual-scroll-viewport>
   
       <div class="table-info-components">
-        <p class="table-rows-selected">{{attributeTableOriginal.length}} rows, 0 selected</p>
+        <p class="table-rows-selected">{{attributeTable.data.length}} rows, 0 selected</p>
         <!-- <button mat-raised-button class="table-save-csv">
           Save Table as CSV
         </button> -->
