--- a/infomapper/src/app/map-components/dialog-content/main-dialog-style.css
+++ b/infomapper/src/app/map-components/dialog-content/main-dialog-style.css
@@ -7,15 +7,6 @@ migrated to this CSS file */
   height: 100%;
 }
 
-/* The class for the close button. The inline-block display makes it so that it will share with the title header
-div, rendering them side-by-side */
-.dialog-close-button {
-  height: 100%;
-  width: 10%;
-  display: inline-block;
-  background-color: #c2c1c1;
-}
-
 /* Div class that takes up 5.5% of the height of the dialog and is gray to differentiate itself from the dialog content */
 .drag-header {
   background-color: #e6e6e6;
@@ -40,4 +31,21 @@ of the space within its parent, drag-header-div from above */
   text-align: center;
   height: 100%;
   width: 100%;
+}
+
+/* The class for the lower-right close button in the dialog. The float: right overrides the display: inline-block and shoves
+the button all the way to the right */
+.lower-dialog-close-button {
+  float: right;
+  margin: 0px 20px 0px 20px;
+  background-color: #c2c1c1;
+}
+
+/* The class for the upper-right close button in a dialog. The inline-block display makes it so that it will share with
+the title header div, rendering them side-by-side */
+.upper-dialog-close-button {
+  height: 100%;
+  width: 10%;
+  display: inline-block;
+  background-color: #c2c1c1;
 }
