--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -26,7 +26,7 @@
 
       <table mat-table [dataSource]="attributeTable">
         <!-- All Columns -->
-        <ng-container *ngFor="let property of attributeTable.data[0] | keyvalue;" matColumnDef="{{property.key}}">
+        <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
           <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
             <b>
               {{property.key}}
