--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -68,6 +68,10 @@
         <!-- <button mat-raised-button class="table-save-csv">
           Save Table as CSV
         </button> -->
+
+        <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
+          Close
+        </button>
       </div>
   
     </div>
