--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
@@ -12,7 +12,10 @@ th.mat-header-cell {
   border-right: 1px;
   border-right-color: rgba(0, 0, 0, 0.25);
   border-right-style: dotted;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
+  word-wrap: break-word;
 }
 
 /* CLASSES */
@@ -104,7 +107,7 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
 
 .table-info-components {
   height: 11%;
-  padding-top: 30px;
+  padding-top: 20px;
   position: relative;
 }
 
