--- a/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-TSGraph/dialog-TSGraph.component.html
@@ -60,12 +60,12 @@
   </div>
 
   <!-- A button on the lower left for viewing the data table of the current time series graph -->
-  <div class="TS-table-components">
-    <button mat-raised-button (click)="openTSTableDialog()" class="TS-table-button">
+  <div class="TS-table-components-group">
+    <button mat-raised-button (click)="openTSTableDialog()">
       Data Table
     </button>
 
-    <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
+    <button mat-raised-button (click)="onClose()">
       Close
     </button>
   </div>
