--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -35,7 +35,7 @@
   
             <td mat-cell
                 *matCellDef="let element"
-                [ngClass]="determineJustification(element[property.key])"
+                [ngClass]="element[property.key] | justification"
                 [attr.id]="'cell-' + element[property.key]">
   
               {{element[property.key]}}
