--- a/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.css
@@ -3,9 +3,10 @@
 /* Sets a max height for the text in the Dialog, as well as uses Courier font for formatting the text correctly and making the
 font smaller so that's it still readable, but the user won't have to scroll a lot to get around the data. */
 .text-box {
-  height: 94.5%;
+  height: 85%;
 }
 
+/* The height takes up all of the .text-box from above, and uses Courier to display text correctly.  */
 .text-box-text {
   height: 100%;
   font-family: 'Courier New', Courier, monospace;
@@ -14,4 +15,20 @@ font smaller so that's it still readable, but the user won't have to scroll a lo
   padding-right: 10px;
   padding-bottom: 0px;
   margin-bottom: 0px;
+}
+
+.text-buttons {
+  float: right;
+}
+
+/* Puts a margin at the top of all buttons in this text dialog so they don't hug the bottom scroll bar of
+the displayed text */
+.text-buttons button {
+  margin-top: 17px;
+}
+
+.text-save-button {
+  display: inline-block;
+  margin: 0px 0px 0px 20px;
+  background-color: #c2c1c1;
 }
