--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -65,13 +65,17 @@
   
       <div class="table-info-components">
         <p class="table-rows-selected">{{attributeTable.data.length}} rows, 0 selected</p>
-        <!-- <button mat-raised-button class="table-save-csv">
-          Save Table as CSV
-        </button> -->
 
-        <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
-          Close
-        </button>
+        <div class="table-buttons">
+          <button mat-raised-button class="table-save-csv">
+            Save
+          </button>
+  
+          <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
+            Close
+          </button>
+        </div>
+        
       </div>
   
     </div>
