--- a/infomapper/src/app/map-components/dialog-content/main-dialog-style.css
+++ b/infomapper/src/app/map-components/dialog-content/main-dialog-style.css
@@ -41,11 +41,24 @@ the button all the way to the right */
   background-color: #c2c1c1;
 }
 
+/* For each component that uses this style file, this will make it so all mat-raised-button's will not have an outline
+at any time, whether when the dialog is created or click on by the user */
+.mat-raised-button {
+  outline: none;
+}
+
+/* When a mat-raised-button is clicked, there is a focus on it that slightly deepens the color of the button. This
+overrides that so that it always stays the same color */
+.mat-raised-button ::ng-deep .mat-button-focus-overlay {
+  display: none;
+}
+
 /* The class for the upper-right close button in a dialog. The inline-block display makes it so that it will share with
 the title header div, rendering them side-by-side */
 .upper-dialog-close-button {
+  background-color: #c2c1c1;
   height: 100%;
   width: 10%;
   display: inline-block;
-  background-color: #c2c1c1;
+  outline: none;
 }
