Issues #300, #302, #303: Fixed a small table bug and added layer properties popup dialog component

--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -74,7 +74,7 @@
 
       <div class="table-buttons">
         <button mat-raised-button (click)="saveDataTable()" class="table-save-csv">
-          Save
+          Download
         </button>
 
         <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
