--- a/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.html
@@ -22,7 +22,7 @@
   <div class="text-buttons">
     <!-- SAVE button -->
     <button mat-raised-button (click)="saveText()" class="text-save-button">
-      Save
+      Download
     </button>
     <!-- CLOSE button -->
     <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
