--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -113,6 +113,12 @@ table.layerOptions {
 	font-size: 5px;
 }
 
+/* Styles only the font awesome list in the menu popup when the vertical dots are clicked */
+.fa-list {
+  vertical-align: middle;
+  padding-right: 5%;
+}
+
 /* Styles only the font awesome table in the menu popup when the vertical dots are clicked */
 .fa-table {
   vertical-align: middle;
