--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -225,6 +225,13 @@
                                 <i class="fa fa-table fa-2x"></i>
                                 Data Table
                               </button>
+
+                              <button mat-menu-item
+                                      class="menu-button"
+                                      (click)="openPropertyDialog(layerView.geoLayerId, layerView.name)">
+                                <i class="fa fa-list fa-2x"></i>
+                                Properties
+                              </button>
                             </mat-menu>
 
                           </div>
@@ -264,6 +271,13 @@
                                         (click)="openAttributeTableDialog(layerView.geoLayerId, layerView.name)">
                                   <i class="fa fa-table fa-2x"></i>
                                   Data Table
+                                </button>
+
+                                <button mat-menu-item
+                                        class="menu-button"
+                                        (click)="openPropertyDialog(layerView.geoLayerId, layerView.name)">
+                                  <i class="fa fa-list fa-2x"></i>
+                                  Properties
                                 </button>
                               </mat-menu>
 
